# webagent

./: .env.example  .env.sample  .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  pyproject.toml
knowledge_base/: .gitkeep
src/webagent/: __init__.py  __main__.py  main.py
src/webagent/agents/: active_learner.py  dreamer.py  executor.py  explorer.py  jury.py  orchestrator.py  page_explorer.py  planner.py  site_explorer.py  vision_engine.py
src/webagent/cli/: commander.py
src/webagent/knowledge/: deep_analyzer.py  models.py  store.py
src/webagent/openclaw/: __init__.py
src/webagent/pipeline/: pipeline.py  retry_manager.py  state_validator.py
src/webagent/prompt_engine/: __init__.py  context.py  engine.py
src/webagent/prompt_engine/templates/: executor.py  explorer.py  jury.py  planner.py  vision.py
src/webagent/safety/: audit.py  classifier.py  permissions.py
src/webagent/skills/: base_skill.py  page_skill_generator.py  skill_manager.py
src/webagent/skills/builtin/: __init__.py  date_formatter.py  price_calculator.py
src/webagent/utils/: config.py  llm.py  logger.py  server.py
tests/: test_active_learner.py  test_deep_analysis.py  test_jury_dreamer.py  test_knowledge.py  test_openclaw.py  test_pipeline.py
