[project]
name = "webpilot-ai"
version = "0.7.1"
description = "智能Web自动化Agent系统 — 基于视觉驱动 + AI + Playwright的六层架构"
authors = [
    { name = "goolelin23", email = "coolelin@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.12.0",
    "playwright>=1.40.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "httpx[http2,socks]>=0.27.0",
    "Pillow>=10.0.0",
]

[project.scripts]
webpilot = "webagent.main:cli_entry"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
